--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .js,.ts,.tsx"
   },
   "dependencies": {
+    "@material-ui/icons": "^4.11.2",
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
