--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@material-ui/icons": "^4.11.2",
+    "dotenv": "^10.0.0",
+    "firebase": "^8.7.0",
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
