--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint . --ext .js,.ts,.tsx"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
+    "date-fns": "^2.23.0",
     "dotenv": "^10.0.0",
     "firebase": "^8.7.0",
     "next": "11.0.0",
