--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
     "date-fns": "^2.23.0",
+    "dayjs": "^1.10.6",
     "dotenv": "^10.0.0",
     "firebase": "^8.7.0",
+    "moment": "^2.29.1",
     "next": "11.0.0",
     "react": "17.0.2",
+    "react-dayjs": "^0.3.2",
     "react-dom": "17.0.2",
     "sass": "^1.35.1"
   },
