--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^8.7.0",
     "moment": "^2.29.1",
     "next": "11.0.0",
+    "next-pwa": "^5.4.1",
     "query-string": "^7.0.1",
     "react": "17.0.2",
     "react-dayjs": "^0.3.2",
